z-index fix

--- a/src/Layers/Layers.module.css
+++ b/src/Layers/Layers.module.css
@@ -26,7 +26,7 @@
   color: var(--gray-text-color);
   margin-top: 16px !important;
   padding: 0 8px !important;
-
+  z-index: 10;
 }
 
 .arrow {
